--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,16 @@ on:
       - main
 
 jobs:
-  tf_fmt:
+  deploy:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
 
     - name: Checkout Repo
       uses: actions/checkout@v1
+
+    - name: Yarn install
+      run: yarn install
 
     - name: Package
       run: ./package.sh
